[package]
name = "rust-concurrency"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.7"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tokio = { version = "1.34.0", features = ["full"] }
num-format = "0.4.4"

[[bin]]
name = "channels"
path = "src/channels/bin/main.rs"

[[bin]]
name = "rayon"
path = "src/rayon/bin/main.rs"

[[bin]]
name = "async"
path = "src/async/bin/main.rs"